# stepik_oop_cpp

./: CMakeLists.txt
2 Constructors and Destructors. Class Methods/2.1 Constructors. Default constructor. Constructor overloading/: lesson.md  task_6.cpp  task_7.cpp  task_8.cpp  task_9.cpp  tasks.md
2 Constructors and Destructors. Class Methods/2.2 Constructor of transformation. Destructor/: lesson.md  task_3.cpp  task_4.cpp  task_7.cpp  task_8.cpp  tasks.md
2 Constructors and Destructors. Class Methods/2.3 Copy constructor. Delegating constructors/: task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp  task_9.cpp
